--- a/src/components/pages/css/MainPage.css
+++ b/src/components/pages/css/MainPage.css
@@ -1,13 +1,5 @@
 .createEvents{
     text-align: center;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 1.5rem;
-    background-color: rgb(54, 124, 255);
+    background-color: grey;
     color: ivory;
-    transition: all 0.3s ease-in-out background-color;
-}
-.createEvents:hover{
-    background-color: rgb(91, 178, 255);
 }
